--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "1.0.0",
   "description": "",
   "homepage": "https://www.sygnal.com",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "serve",
-    "build": "esbuild ./src/*.ts ./src/**/*.ts --bundle --sourcemap --minify --outdir=dist --watch",
+    "build": "node build.js",
+    "watch": "node build.js --watch",
+    "esbuild": "esbuild ./src/*.ts --bundle --sourcemap --outdir=dist --watch",
     "format": "prettier src/*.ts -w"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/learyjk/dev-template.git"
+    "url": "git+https://github.com/sygnaltech/webflow-dev-template.git"
   },
-  "author": "Michael Wells",
+  "author": {
+    "name": "Michael Wells",
+    "email": "mike@sygnal.com",
+    "url": "https://www.sygnal.com"
+  },
   "devDependencies": {
     "esbuild": "^0.15.14",
     "prettier": "^2.7.1",
     "serve": "^14.1.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@sygnal/sse": "^0.2.0",
+    "glob": "^11.0.0",
+    "js-cookie": "^3.0.5",
+    "posthog-js": "^1.161.3"
   }
 }
